Fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ body {
 }
 
 .container {
-  width: 90%;
+  width: 60%;
 }
 
 .header {
